--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,51 +1,1 @@
-#buscador {
-	width: 600px;
-	margin: 0 auto;
-	padding-bottom: 120px;
-}
-.palabraBuscada {
-	color: white;
-	font-size: 4em;
-	display: flex;
-	align-items: center;
-	height: 300px;
-}
-span.arrowright {
-	background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmwCYk73USvnMklI6h46FXJz_JW6kK2YFjQPPq69L3lrePj1BLTlCeQG5qr3qpAioabGc&usqp=CAU");
-	background-repeat: no-repeat;
-	width: 40px;
-	height: 40px;
-	display: block;
-	background-position: 0;
-	background-size: 40px;
-}
-.contenedor {
-	height: 50px;
-	width: 100%;
-	display: flex;
-}
-.inputbuscar {
-	height: 100%;
-	width: 100%;
-	padding: 0 10px;
-}
-.botonBuscar {
-	background-color: #673AB7;
-	color: white;
-	height: 100%;
-	border: none;
-	padding: 10px;
-	margin-left: 10px;
-	cursor: pointer;
-}
-.botonBuscar:hover {
-	background-color: #502799;
-	-webkit-transition: all 0.2s ease-out;
-	-moz-transition:    all 0.2s ease-out;
-	-o-transition:      all 0.2s ease-out;
-	transition:         all 0.2s ease-out;
-}
-.definicion {
-	margin-top: 10px;
-	letter-spacing: 0.05em;
-}
+#darkmode {}
