--- a/src/styles/Darkmode.module.css
+++ b/src/styles/Darkmode.module.css
@@ -1,3 +1,6 @@
+body.darkmode {
+	background: #171717;
+}
 button#darkmode {
 	display: flex;
 	background: none;
@@ -38,7 +41,7 @@ button#darkmode {
 	border-radius: 50%;
 	position: relative;
 	top: 2px;
-	left: 5px;
+	left: 3px;
 }
 .isotipo {
 	position: relative;
