--- a/src/styles/Buscador.module.css
+++ b/src/styles/Buscador.module.css
@@ -12,7 +12,6 @@
 	background-color: #ddd;
 	border-radius: 18px;
 	border: none;
-	font-family: times new roman, serif;
 	font-size: 1.7em;
 }
 #buscador button.botonBuscar {
@@ -25,6 +24,7 @@
 	position: absolute;
 	right: 0;
 	background: none;
+	outline: none;
 }
 .isotipo {
 	width: 30px;
