--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
-	--morado: #673AB7;
+	--morado: #9e55e0;
 	--moradoOscuro: #502799;
 	--grisOscuro: #787878;
 	
@@ -43,83 +45,35 @@
 	--card-rgb: 180, 185, 188;
 	--card-border-rgb: 131, 134, 135;
 }
-
-@media (prefers-color-scheme: dark) {
-	:root {
-		--foreground-rgb: 255, 255, 255;
-		--background-start-rgb: 0, 0, 0;
-		--background-end-rgb: 0, 0, 0;
-		
-		--primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-		--secondary-glow: linear-gradient(
-		to bottom right,
-		rgba(1, 65, 255, 0),
-		rgba(1, 65, 255, 0),
-		rgba(1, 65, 255, 0.3)
-		);
-		
-		--tile-start-rgb: 2, 13, 46;
-		--tile-end-rgb: 2, 5, 19;
-		--tile-border: conic-gradient(
-		#ffffff80,
-		#ffffff40,
-		#ffffff30,
-		#ffffff20,
-		#ffffff10,
-		#ffffff10,
-		#ffffff80
-		);
-		
-		--callout-rgb: 20, 20, 20;
-		--callout-border-rgb: 108, 108, 108;
-		--card-rgb: 100, 100, 100;
-		--card-border-rgb: 200, 200, 200;
-	}
-}
-
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+	letter-spacing: 0.05em;
+	font-family: 'Roboto Slab', serif !important;
 }
-
 html,
 body {
 	max-width: 100vw;
 	overflow-x: hidden;
 }
-
 body {
-	color: rgb(var(--foreground-rgb));
-	/* background-color: #171717; */
-	/* background: linear-gradient(
-	to bottom,
-	transparent,
-	rgb(var(--background-end-rgb))
-	)
-	rgb(var(--background-start-rgb)); */
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
-/* @media (prefers-color-scheme: dark) {
-	html {
-		color-scheme: dark;
-	}
-} */
-
-/* .darkmode {
-	filter: invert(1);
-} */
-
+	color: #222;
+	background: #fff;
+ }
+ p {
+	color: black;
+ }
+ /* Dark Mode styles */
+ body.darkmode {
+	color: #eee;
+	background: #121212;
+ }
+ body.darkmode p {
+	color: white;
+ }
 main {
 	width: 90%;
 	margin: 0 auto;
 	padding-bottom: 120px;
-}
-body.darkmode {
-	background-color: #050505;
 }
