--- a/src/styles/Significado.module.css
+++ b/src/styles/Significado.module.css
@@ -14,10 +14,11 @@
 .ladoAudio .botonReproduceAudio {
 	background-color: transparent;
 	border: none;
+	margin: 20px 0 0 0;
+	cursor: pointer;
 }
 .ladoAudio .botonReproduceAudio > img {
 	width: 50px;
-	margin: 20px 0 0 0;
 }
 .ladoAudio audio {
 	display: none;
