--- a/src/styles/Buscador.module.css
+++ b/src/styles/Buscador.module.css
@@ -7,12 +7,12 @@
 #buscador .inputbuscar {
 	height: 100%;
 	width: 100%;
-	padding: 0 50px 0 10px;
+	padding: 0 50px 0 18px;
 	outline: none;
-	background-color: #ddd;
 	border-radius: 18px;
 	border: none;
-	font-size: 1.7em;
+	font-size: 1.1em;
+	letter-spacing: 0.05em;
 }
 #buscador button.botonBuscar {
 	background-color: white;
